--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -16,19 +16,19 @@ author:
 
 # Delete Before Submitting
 
-+--------------+---------------------------------------------------------------+
-| Student      | Assignment                                                    |
-+==============+===============================================================+
-| Cory         | Country & Category                                            |
-+--------------+---------------------------------------------------------------+
-| Kaitlyn      | Age & Sex                                                     |
-|              |                                                               |
-|              | Data Availability Table (Show's what cMD has from each study) |
-+--------------+---------------------------------------------------------------+
-| Faith        | Limitations (Missing Data, Pop size, etc.)                    |
-+--------------+---------------------------------------------------------------+
-| Jacob        | Summary Stats, Glossary & Introduction                        |
-+--------------+---------------------------------------------------------------+
++-----------+---------------------------------------------------------------+
+| Student   | Assignment                                                    |
++===========+===============================================================+
+| Cory      | Country & Category                                            |
++-----------+---------------------------------------------------------------+
+| Kaitlyn   | Age & Sex                                                     |
+|           |                                                               |
+|           | Data Availability Table (Show's what cMD has from each study) |
++-----------+---------------------------------------------------------------+
+| Faith     | Limitations (Missing Data, Pop size, etc.)                    |
++-----------+---------------------------------------------------------------+
+| Jacob     | Summary Stats, Glossary & Introduction                        |
++-----------+---------------------------------------------------------------+
 
 ### Assignment Guidelines from Canvas
 
@@ -373,7 +373,7 @@ Geographical location and consequently diet are also well established to be link
 ```{r, echo=FALSE}
 #| label: Countries Associations
 #| fig-width: 14
-#| fig-height: 7
+#| fig-height: 6
 #| fig-dpi: 500
 # ---
 
@@ -455,21 +455,20 @@ country3 <- qualifying_studies %>%
 layout3 <- c( # t, l , b = t, r = l
   area(1, 1, 2, 2),
   area(1, 3, 2, 4),
-  area(1, 5, 2, 6),
-  area(3, 3, 3, 4)
+  area(1, 5, 2, 6)
 )
 
 #plot(layout3)
 
 geography_caption <- str_wrap(
-  "(A)  
-   (B) 
-   (C) ", 
+  "(A) Bar plot of country sample count, sorted in descending order. 
+   (B) Stacked bar plot of country sample count, sorted in descending order, filled with CRC progression classifiers.
+   (C) Stacked bar plot of the CRC progression classifier proportion for each country in the multi-cohort study.", 
   width = 200
 )
 
-country1 + country2 + country3 + guide_area() + 
-  plot_layout(design = layout3, guides = "collect") +
+country1 + country2 + country3 + 
+  plot_layout(design = layout3, guides = "collect", heights = c(1, 0.18)) +
   plot_annotation(
     title = "Figure 3: Country Associations with CRC Progression Classifiers",
     tag_levels = "A",
@@ -478,13 +477,14 @@ country1 + country2 + country3 + guide_area() +
   theme(
         plot.title = element_text(hjust = 0, size = 14),
         plot.caption = element_text(hjust = 0, size = 11), 
-        legend.key.size = unit(0.5, "cm"), 
+        legend.key.size = unit(0.5, "cm"),
         legend.title = element_text(size = 10), 
-        legend.direction = "horizontal"
+        legend.direction = "vertical", 
+        legend.position = "right"
   )
 ```
 
-#### Taxa & Pathway Analysis (Cory)
+#### Taxonomic & Pathway Analysis (Cory)
 
 #### Data Limitations
 
